<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">encrypt</string>
	<string name="version">2021.10</string>
	<string name="encrypt">Encrypt</string>
	<string name="decrypt">Decrypt</string>

	<string name="please_wait">Please wait …</string>
	<string name="about">About</string>
	<string name="description">encrypt ~ a cross platform, symmetric key, file encryption application</string>
	<string name="copyright">Copyright © 2004–2021, albinoloverats ~ Software Development</string>
	<string name="url">https://albinoloverats.net/projects/encrypt</string>

	<string name="options">Options</string>
	<string name="compress">Compression</string>
	<string name="follow">Follow Symlinks</string>
	<string name="key_file">Key File</string>
	<string name="password">Password</string>

	<string name="advanced">Advanced</string>
	<string name="raw">Raw</string>
	<string name="compatibility">Compatibility</string>

	<string name="use_key_file">Using Key File</string>
	<string name="use_password">Using Password</string>

	<string name="on">On</string>
	<string name="off">Off</string>

	<string name="encrypting">Encrypting</string>
	<string name="decrypting">Decrypting</string>

	<string name="choose_source">Choose Source</string>
	<string name="choose_cipher">Choose Cipher</string>
	<string name="choose_hash">Choose Hash</string>
	<string name="choose_mode">Choose Mode</string>
	<string name="choose_mac">Choose MAC</string>
	<string name="choose_output">Choose Output</string>
	<string name="choose_key">Choose Key</string>

	<string name="doCancel">Tap back again to cancel</string>

	<string name="multipleSelected">Multiple Items Selected</string>

	<string name="location">Location</string>
	<string name="cant_read_folder">Folder can\'t be read!</string>
	<string name="nnew">New</string>
	<string name="select">Select</string>
	<string name="file_name">File name:</string>
	<string name="cancel">Cancel</string>
	<string name="create">Save</string>
	<string name="no_data">No Data</string>
	<color name="red">#b22222</color>
	<string name="err">Error</string>
</resources>
