<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_about" android:icon="@android:drawable/ic_menu_info_details" android:title="@string/about"/>
	<item android:id="@+id/menu_options" android:icon="@android:drawable/ic_menu_preferences" android:title="@string/options">
		<menu>
			<item android:id="@+id/menu_options_compress" android:title="@string/compress" android:checkable="true" android:checked="true"/>
			<item android:id="@+id/menu_options_follow" android:title="@string/follow" android:checkable="true" android:checked="false"/>
			<item android:id="@+id/menu_options_key_file" android:title="@string/key_file" android:checkable="true" android:checked="false"/>
			<item android:id="@+id/menu_advanced_raw" android:title="@string/raw" android:checkable="true" android:checked="false"/>
		</menu>
	</item>
	<item android:id="@+id/menu_advanced_compatibility" android:icon="@android:drawable/ic_menu_set_as" android:title="@string/compatibility">
		<menu>
			<group android:id="@+id/menu_group_compatibility" android:checkableBehavior="single"/>
		</menu>
	</item>
</menu>
